Solved health chart alignment issue

--- a/public/project-admin-views/assets/css/style.css
+++ b/public/project-admin-views/assets/css/style.css
@@ -8601,13 +8601,24 @@ ul.parsley-errors-list li {
   table-layout: fixed;
   max-width: 100%;
 }
+.sticky-table-outer-div table tr {
+  display: table-row;
+  width: 100% !important;
+  float: left;
+}
+.sticky-table-outer-div.sticky-tableWidth table {
+  width: 100%;
+}
+.sticky-table-outer-div.sticky-tableWidth table tr {
+  float: none;
+}
 .sticky-table-outer-div .table th {
   text-align: center;
-  width: 80px !important;
+  width: 81px !important;
 }
 .sticky-table-outer-div .table td {
   text-align: center;
-  width: 80px !important;
+  width: 81px !important;
 }
 .sticky-table-outer-div .table td i {
   height: 16px;
@@ -8624,9 +8635,10 @@ ul.parsley-errors-list li {
   background: #fff;
   margin-right: 10px;
   text-align: left;
-  height: 30px;
-  overflow: hidden
-  /*margin-top:-3px; compensate for top border*/
+  /*height: 30px;*/
+  overflow: hidden;
+  padding: 0 10px !important;
+  line-height: 2.9;
 }
 .th-headcol {
   min-height: 80px;
